version/0.3/_sources/api/ansys/rocky/core/_api_stubs/rocky30/plugins/api/ra_solid_material/RASolidMaterial.rst.txt
.. py:class:: RASolidMaterial(id: str, model_id: Optional[str] = ...)


   Bases: :py:obj:`ansys.rocky.core._api_stubs.plugins10.plugins.api.api_element_item.ApiElementItem`, :py:obj:`ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_addins.ElementWithAddins`

   .. py:method:: GetWrappedClass()
      :classmethod:


   .. py:method:: GetClassName() -> str
      :classmethod:


   .. py:method:: GetUseBulkDensity() -> bool


   .. py:method:: SetUseBulkDensity(value: bool) -> None


   .. py:method:: GetBulkDensity(unit: Optional[str] = ...) -> float


   .. py:method:: SetBulkDensity(value: Union[str, float], unit: Optional[str] = ...) -> None


   .. py:method:: GetCurrentDensity(unit: Optional[str] = ...) -> float


   .. py:method:: SetCurrentDensity(value: Union[str, float], unit: Optional[str] = ...) -> None


   .. py:method:: GetDensity(unit: Optional[str] = ...) -> float


   .. py:method:: SetDensity(value: Union[str, float], unit: Optional[str] = ...) -> None


   .. py:method:: GetYoungsModulus(unit: Optional[str] = ...) -> float


   .. py:method:: SetYoungsModulus(value: Union[str, float], unit: Optional[str] = ...) -> None


   .. py:method:: GetName() -> str


   .. py:method:: SetName(value: str) -> None


   .. py:method:: GetPoissonRatio(unit: Optional[str] = ...) -> float


   .. py:method:: SetPoissonRatio(value: Union[str, float], unit: Optional[str] = ...) -> None


   .. py:method:: GetSpecificHeat(unit: Optional[str] = ...) -> float


   .. py:method:: SetSpecificHeat(value: Union[str, float], unit: Optional[str] = ...) -> None


   .. py:method:: GetThermalConductivity(unit: Optional[str] = ...) -> float


   .. py:method:: SetThermalConductivity(value: Union[str, float], unit: Optional[str] = ...) -> None


